--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: https://eternity.bora.sh # todo: change site url.
-title: Alexander Knips Furniture # todo: change site name.
+title: ADGK woodworks # todo: change site name.
 defaultContentLanguage: "en"
 theme: eternity
 googleAnalytics: "" # todo: set your analytics id.
