--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://eternity.bora.sh # todo: change site url.
+baseURL: https://adgkwoodworks.com # todo: change site url.
 title: ADGK woodworks # todo: change site name.
 defaultContentLanguage: "en"
 theme: eternity
